does iteration 2: list all drones

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,11 @@
 
   <body>
 
+    <nav>
+      <a href="/drones">Drones List</a>
+      <a href="/drones/create">Add Your Drone</a>
+    </nav>
+
     {{{body}}}
 
     <script src="/javascripts/script.js"></script>
