--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,8 @@
 <h2>Available drones</h2>
+{{#each drones}}
+ <div>
+     <h3>Name: {{this.name}}</h3>
+     <p>Propellers: {{this.propellers}}</p>
+     <p>Speed: {{this.maxSpeed}}</p>
+ </div>
+{{/each }}
