does iteration 3: Add a new drone

--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,15 @@
 <h2>Create a new drone</h2>
+
+<form action="/drones/create" method="post">
+
+<label for="name">Name:</label>
+<input type="text" name="name" id="name" />
+
+<label for="propellers">Propellers:</label>
+<input type="text" name="propellers" id="ropellers"/>
+
+<label for="speed">Max Speed:</label>
+<input type="text" name="maxSpeed" id="speed"/>
+
+<button type="submit">Create Now!</button>
+</form>
