does iteration 4: Update the drone

--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -4,5 +4,6 @@
      <h3>Name: {{this.name}}</h3>
      <p>Propellers: {{this.propellers}}</p>
      <p>Speed: {{this.maxSpeed}}</p>
+     <a href="/drones/{{this._id}}/edit">Edit Drone</a>
  </div>
 {{/each }}
