--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,15 @@
-<h2>Update the drone</h2>
+<h2>Update the drone: {{drone.name}}</h2>
+
+<form action="/drones/{{drone._id}}/edit" method="post">
+
+<label for="name">Name:</label>
+<input type="text" name="name" id="name" value="{{drone.name}}"/>
+
+<label for="propellers">Propellers:</label>
+<input type="text" name="propellers" id="propellers" value="{{drone.propellers}}"/>
+
+<label for="speed">Max Speed:</label>
+<input type="text" name="maxSpeed" id="speed" value="{{drone.maxSpeed}}"/>
+
+<button type="submit">Update now!</button>
+</form>
