--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -4,6 +4,9 @@
      <h3>Name: {{this.name}}</h3>
      <p>Propellers: {{this.propellers}}</p>
      <p>Speed: {{this.maxSpeed}}</p>
-     <a href="/drones/{{this._id}}/edit">Edit Drone</a>
+     <a href="/drones/{{this._id}}/edit">Edit</a>
+     <form action="/drones/{{this._id}}/delete" method="POST">
+        <button>Delete</button>
+     </form>
  </div>
 {{/each }}
